# mechanics

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PLANNING.md  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
data/: README.md
data/canonical/: README.md  asteroid_ejection_probability_quick.json  asteroid_resonance_normal_form_quick.json  circular_restricted_three_body_quick.json  cosserat_rod_quick.json  deforming_body_gauge_quick.json  fluids_vorticity_quick.json  hamiltonian_pendulum_quick.json  heavy_symmetric_top_quick.json  lidov_kozai_quick.json  linear_elasticity_quick.json  navier_stokes_solutions_quick.json  rigid_body_euler_top_quick.json  standard_map_homoclinic_tangle_quick.json  standard_map_quick.json  standard_map_torus_breakdown_quick.json  three_body_benchmark_quick.json
demos/: README.md
demos/labs/: README.md  asteroid_ejection_probability.md  circular_restricted_three_body.md  cosserat_rod.md  deforming_body_gauge.md  elasticity_and_navier_stokes.md  hamiltonian_pendulum.md  point_vortices.md  rigid_body_euler_top.md  standard_map_phase_portrait.md  standard_map_torus_breakdown.md
demos/mathematica/: AsteroidEjectionProbability.wl  AsteroidResonanceNormalForm.wl  CircularRestrictedThreeBody.wl  GaugeDeformingBody.wl  LinearElasticity.wl  NavierStokesSolutions.wl  (+3 more)
figures/: README.md
references/: README.md  kam_lecture_extraction.md  physics_151_extraction.md
syllabus/: course-map.md
tests/: test_demo_contracts.py  test_demo_smoke.py
(+46 files in other folders)
